# behavioral-entropy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_activity.jsonl
src/behavioral_entropy/: __init__.py  cli.py  entropy.py  fingerprint.py  profiler.py  types.py
tests/: test_cli.py  test_entropy.py  test_fingerprint.py  test_profiler.py
