[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavioral-entropy"
version = "0.1.0"
description = "AI agent behavioral fingerprinting via entropy analysis"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Brian James Rutherford", email = "brian@delalli.com" },
]
keywords = [
    "entropy",
    "behavioral-analysis",
    "fingerprinting",
    "ai-agents",
    "anomaly-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "scipy>=1.11",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = [
    "behavioral-entropy[ml,dev]",
]

[project.scripts]
behavioral-entropy = "behavioral_entropy.cli:main"

[project.urls]
Repository = "https://github.com/ScrappinR/behavioral-entropy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
